# econ-ml-portfolio

./: README.md
econ-ml-portfolio/: .dockerignore  .gitignore  Dockerfile  README.md  docker_entrypoint.sh  pyproject.toml  requirements.txt
econ-ml-portfolio/.github/workflows/: ci.yml
econ-ml-portfolio/experiments/central-bank-nlp/: README.md  config.yaml  config_smoke.yaml
econ-ml-portfolio/experiments/economic-complexity/: README.md  config.yaml  config_smoke.yaml
econ-ml-portfolio/experiments/gdp-nowcasting/: README.md  config.yaml  config_smoke.yaml
econ-ml-portfolio/experiments/informal-economy/: README.md  config.yaml  config_smoke.yaml
econ-ml-portfolio/experiments/labor-market-mismatch/: README.md  config.yaml  config_smoke.yaml
econ-ml-portfolio/scripts/: download_esco.py  download_fomc.py  download_nightlights.py  download_oec.py  download_wdi.py
econ-ml-portfolio/src/: main.py  trainer.py
econ-ml-portfolio/src/datasets/: esco.py  fomc.py  nightlights.py  oec.py  wdi.py
econ-ml-portfolio/src/experiments/: central_bank_nlp.py  economic_complexity.py  gdp_nowcasting.py  informal_economy.py  labor_market.py
econ-ml-portfolio/src/models/: cnn.py  embeddings.py  gnn.py  lstm.py  nlp.py
econ-ml-portfolio/src/utils/: io.py  metrics.py  viz.py
econ-ml-portfolio/tests/: test_datasets.py  test_metrics.py  test_models.py
